🐛 Fix gradient overlapping download chart button

--- a/src/components/DownloadPopup/style.css
+++ b/src/components/DownloadPopup/style.css
@@ -14,6 +14,7 @@
   left: 0;
   bottom: 102%;
   width: 150px;
+  z-index: 10;
 }
 .list li {
   padding: 4px 10px;
